# niripwmenu-reborn

./: .gitignore  CMakeCache.txt  CMakeLists.txt  PKGBUILD  README.md  niripwmenu.qrc  niripwmenu_reborn.qrc
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  niripwmenu_qmltyperegistrations.cpp
build2/.qt/: .qmlls.build.ini  .qmlls.build.ini.part  QtDeploySupport.cmake  QtDeployTargets.cmake  niripwmenu_qml.cmake  niripwmenu_res.cmake
build2/.qt/deploy_qml_imports/: niripwmenu.cmake
build2/.qt/qml_imports/: niripwmenu_build.cmake  niripwmenu_build.rsp  niripwmenu_conf.rsp
build2/.qt/rcc/: data.qrc  niripwmenu_raw_qml_0.qrc  niripwmenu_raw_qml_0_extra_qmldirs.qrc  qmake_niripwmenu.qrc  qrc_data.cpp  qrc_niripwmenu_raw_qml_0.cpp  qrc_niripwmenu_raw_qml_0_extra_qmldirs.cpp  qrc_qmake_niripwmenu.cpp
build2/.rcc/qmlcache/: all_aotstats.aotstatslist  module_niripwmenu.aotstatslist  niripwmenu_qml_loader_file_list.rsp  niripwmenu_qmlcache_loader.cpp
build2/.rcc/qmlcache/niripwmenu_src/qml/: Main_qml.cpp  Main_qml.cpp.aotstats  Style_qml.cpp  Style_qml.cpp.aotstats
build2/.rcc/qmllint/: niripwmenu.rsp  niripwmenu_json.rsp  niripwmenu_module.rsp
build2/meta_types/: niripwmenu_json_file_list.txt  niripwmenu_json_file_list.txt.timestamp  qt6niripwmenu_metatypes.json.gen
build2/niripwmenu/: niripwmenu_qml_module_dir_map.qrc  qmldir
build2/niripwmenu/src/qml/: Main.qml  Style.qml  qmldir
build2/niripwmenu_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build2/niripwmenu_autogen/UVLADIE3JM/: moc_configmanager.cpp  moc_configmanager.cpp.d  moc_configmanager.cpp.json
data/: config.json
src/: configmanager.cpp  configmanager.h  main.cpp  system.cpp  system.h
src/niripwmenu/assets/: config.yaml
src/qml/: Main.qml  MyStyle.qml  Style.qml
